# Ai_Research_Asst

./: .gitignore  README.md  RUN.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/llm/: ollama_client.py
app/rag/: chain.py  embeddings.py  loader.py  retriever.py  splitter.py  vectorstore.py
app/services/: rag_service.py
scripts/: chat.py  ingest.py  test_retriever.py
